Changes in Version 2.2-0 (2019-05-19)
=====================================

   o added (for now undocumented) 'time' argument to more functions that are
     computationally expensive


Changes in Version 2.1-0 (2019-05-13)
=====================================

   o added formula() method for objects of class 'rma'

   o llplot() now also allows for measure="GEN"; also, the documentation and
     y-axis label have been corrected to indicate that the function plots
     likelihoods (not log likelihoods)

   o confint.rma.mv() now returns an object of class 'list.confint.rma' when
     obtaining CIs for all variance and correlation components of the model;
     added corresponding print.list.confint.rma() function

   o moved 'tol' argument in permutest() to 'control' and renamed the
     argument to 'comptol'

   o added 'PMM' and 'GENQM' estimators in rma.uni()

   o added vif() function to get variance inflation factors

   o added .glmulti object for making the interaction with glmulti easier

   o added reporter() and reporter.rma.uni() for dynamically generating
     analysis reports for objects of class 'rma.uni'

   o output is now styled/colored when 'crayon' package is loaded (this only
     works on a 'proper' terminal with color support; also works in RStudio)

   o overhauled plot.gosh.rma(); when 'out' is specified, it now shows two
     distributions, one for the values when the outlier is included and
     one for the values when for outlier is excluded; dropped the 'hcol'
     argument and added 'border' argument

   o refactored influence.rma.uni() to be more consistent internally with
     other functions; print.infl.rma.uni() and plot.infl.rma.uni() adjusted
     accordingly; functions cooks.distance.rma.uni(), dfbetas.rma.uni(), and
     rstudent.rma.uni() now call influence.rma.uni() for the computations

   o rstudent.rma.uni() now computes the SE of the deleted residuals in such